--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
-version: '3.7'
 services:
   app: 
-    image: joanfont/sonador-api
+    image: joanfont/grall-api
     build: .
     depends_on:
       - redis
